merlict/c89/chk_debug_mli_core_mli_viewer.h

struct mliColor {
        float r;
        float g;
        float b;
};
struct mliGeometry;
struct mliGeometryToMaterialMap;
struct mliGeometryId {
        uint32_t robj;
        uint32_t face;
};
struct mliVec {
        double x;
        double y;
        double z;
};
/**
 *      mliPrng is a transparent container to use different
 *      pseudo-random-number-generators (PRNGs) within merlict.
 *      It defines a minimal interface:
 *
 *      1) (Re)initializing with a seed.
 *      2) Generating the next random number uint32.
 *
 *      Merlict ships with two Prngs:
 *
 *      1) Mersenne Twister 19937
 *      2) PCG32
 *
 *      If you want to use your own, wrapp it here using mliPrng. See below.
 */

union mliPrngStorage {
        struct mliMT19937 mt19937;
        struct mliPCG32 pcg32;
        /* Add your own prng here */
};
struct mliPrng {
        union mliPrngStorage _storage;
        uint32_t (*generate_uint32)(void *);
        void (*reinit)(void *, const uint32_t);
};
uint32_t mliPrng_generate_uint32(struct mliPrng *prng);
/**
 *      Mersenne Twister 19937
 *      ----------------------
 */
struct mliPrng mliPrng_init_MT19937(const uint32_t seed);
/**
 *      PCG32
 *      -----
 */
struct mliPrng mliPrng_init_PCG32(const uint32_t seed);
struct mliAABB {
        /*
         * Rectangular (A)xis-(A)ligned-(B)ounding-(B)ox
         * oriented w.r.t. the unit-vectors.
         *
         *                     O----------------------O
         *                    /.                     /|
         *                   / .                    / |
         *                  /  .                   /  |
         *                 /   .                  /   |
         *                O----------------------O upper
         *                |    .                 |    |
         *      Z         |    .                 |    |
         *      |       lo|wer O- - - - - - - - -| - -O
         *      |         |   .                  |   /
         *      |         |  .                   |  /
         *      /-----Y   | .                    | /
         *     /          |.                     |/
         *    X           O----------------------O
         *
         *
         */
        struct mliVec lower;
        struct mliVec upper;
};
struct mliImage {
        uint32_t num_cols;
        uint32_t num_rows;
        struct mliColor *raw;
};
struct mliRay {
        struct mliVec support;
        struct mliVec direction;
};
struct mliIntersection {
        struct mliGeometryId geometry_id;
        struct mliVec position_local;
        double distance_of_ray;
};
double mli_random_uniform(struct mliPrng *prng);
struct mliIntersectionSurfaceNormal {
        struct mliGeometryId geometry_id;
        struct mliVec position;
        struct mliVec surface_normal;
        struct mliVec position_local;
        struct mliVec surface_normal_local;
        double distance_of_ray;
        int64_t from_outside_to_inside;
};
struct mliView {
        struct mliVec position;
        struct mliVec rotation;
        double field_of_view;
};
struct mliCube {
        /*
         * Cubic Oriented-Bounding-Box
         * oriented w.r.t. the unit-vectors.
         */
        struct mliVec lower;
        double edge_length;
};
struct mliArchive mliArchive_init(void);
void mliArchive_free(struct mliArchive *arc);
int mliArchive_malloc(struct mliArchive *arc);
int mliArchive_malloc_from_path(struct mliArchive *arc, const char *path);
struct mlivrConfig {
        uint32_t random_seed;
        uint64_t preview_num_cols;
        uint64_t preview_num_rows;
        uint64_t export_num_cols;
        uint64_t export_num_rows;
        double step_length;
        struct mliView view;

        double aperture_camera_f_stop_ratio;
        double aperture_camera_image_sensor_width;
};
struct mlivrConfig mlivrConfig_default(void);
struct mliPhoton {
        struct mliRay ray;
        double wavelength;
        int64_t id;
};
struct mliMaterials {
        uint64_t num_surfaces;
        struct mliSurface *surfaces;
        struct mliName *surface_names;

        uint64_t num_media;
        struct mliMedium *media;
        struct mliName *medium_names;

        uint64_t num_boundary_layers;
        struct mliBoundaryLayer *boundary_layers;
        struct mliName *boundary_layer_names;

        uint64_t default_medium;
};
struct mliPhotonInteraction {
        int32_t on_geometry_surface;
        struct mliGeometryId geometry_id;

        struct mliVec position;
        struct mliVec position_local;
        double distance_of_ray;

        uint64_t medium_coming_from;
        uint64_t medium_going_to;

        int32_t from_outside_to_inside;
        int32_t type;
};
struct mliMaterials;
struct mliArchive;
struct mliGeometry;
struct mliGeometry {
        uint32_t num_objects;
        struct mliObject *objects;
        struct mliName *object_names;

        uint32_t num_robjects;
        uint32_t *robjects;
        uint32_t *robject_ids;
        struct mliHomTraComp *robject2root;
};
/*
 * The dynamic node
 * ================
 */

struct mliTmpNode {
        struct mliTmpNode *children[8];
        uint32_t num_objects;
        uint32_t *objects;

        int32_t flat_index;
        int32_t node_index;
        int32_t leaf_index;
};
int mliTmpNode_malloc_tree_from_bundle(
        struct mliTmpNode *root_node,
        const void *bundle,
        const uint32_t num_items_in_bundle,
        int (*item_in_bundle_has_overlap_aabb)(
                const void *,
                const uint32_t,
                const struct mliAABB),
        const struct mliCube bundle_cube);
int mliTmpNode_add_children(
        struct mliTmpNode *node,
        const void *bundle,
        int (*item_in_bundle_has_overlap_aabb)(
                const void *,
                const uint32_t,
                const struct mliAABB),
        const struct mliCube cube,
        const uint64_t depth,
        const uint64_t max_depth);
/*
 * The dynamic octree
 * ==================
 */

struct mliTmpOcTree {
        struct mliCube cube;
        struct mliTmpNode root;
};
int mliTmpOcTree_malloc_from_bundle(
        struct mliTmpOcTree *octree,
        const void *bundle,
        const uint32_t num_items_in_bundle,
        int (*item_in_bundle_has_overlap_aabb)(
                const void *,
                const uint32_t,
                const struct mliAABB),
        struct mliAABB bundle_aabb);
struct mliOcTree {
        struct mliCube cube;
        uint64_t num_nodes;
        struct mliNode *nodes;
        struct mliLeafArray leafs;
        uint8_t root_type;
};
void mli_ray_octree_traversal(
        const struct mliOcTree *octree,
        const struct mliRay ray,
        void *work,
        void (*work_on_leaf_node)(
                void *,
                const struct mliOcTree *,
                const uint32_t));
void mli_ray_octree_traversal_sub(
        struct mliVec t0,
        struct mliVec t1,
        const struct mliOcTree *octree,
        const int32_t node_idx,
        const int32_t node_type,
        uint8_t permutation,
        void *work,
        void (*work_on_leaf_node)(
                void *,
                const struct mliOcTree *,
                const uint32_t));
struct mliAccelerator {
        uint32_t num_objects;
        struct mliOcTree *object_octrees;

        uint32_t num_robjects;
        struct mliAABB *robject_aabbs;

        struct mliOcTree scenery_octree;
};
struct mliGeometryToMaterialMap {
        uint32_t num_robjects;
        uint32_t total_num_boundary_layers;
        uint32_t *boundary_layers;
        uint32_t *first_boundary_layer_in_robject;
};
struct mliScenery {
        struct mliGeometry geometry;
        struct mliAccelerator accelerator;
        struct mliMaterials materials;
        struct mliGeometryToMaterialMap geomap;
};
struct mliScenery mliScenery_init(void);
void mliScenery_free(struct mliScenery *scenery);
int mlivr_run_interactive_viewer(
        const struct mliScenery *scenery,
        const struct mlivrConfig config);
int mliScenery_malloc_from_path(struct mliScenery *scenery, const char *path);
int mliScenery_write_to_path(
        const struct mliScenery *scenery,
        const char *path);
int mliScenery_malloc_from_Archive(
        struct mliScenery *scenery,
        const struct mliArchive *archive);